--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;\f1\fnil\fcharset0 Menlo-Regular;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww28200\viewh14340\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs36 \cf0 # Node modules (Next.js)\
+# Node modules (Next.js)\
 frontend/node_modules/\
 \
 # Next.js build output\
@@ -53,6 +46,5 @@ backend/.DS_Store\
 # Others\
 *.log\
 *.sqlite\
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\partightenfactor0
-
-\f1\fs28 \cf2 \CocoaLigature0 .DS_Store}
+*.DS_Store\
+*.swp\
