--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/postcss": "^4.1.3",
+    "axios": "^1.8.4",
     "echarts": "^5.6.0",
-    "next": "14.1.0",
+    "next": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sweetalert2": "^11.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
