--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,14 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
+        "cropperjs": "^1.6.2",
         "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.5.4",
+        "postcss-nesting": "^13.0.1",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
     }
 }
